# catena

./: .gitignore  README.md  pyproject.toml  requirements.txt
catena/: __version__.py  main.py
catena/components/: README.md  about.py
catena/components/about/: about.py
catena/components/preferences/: general.py  graph.py  layout.py  menu.py  topic_menu.py
catena/core/: about.py  appdata.py  client.py  color.py  example_graph.py  file.py  io_utils.py  namespace.py  pubsub.py  session.py  shortcuts.py  texture.py  toolbar.py
catena/core/graph/: example_graph.py  graph_view.py  node.py  port.py  wire.py
catena/core/nodes/: README.md  base.py  comment.py  graph.py  panel.py  preview_node.py  start.py  transition.py
catena/core/nodes/convert/: __init__.py  height_to_ao.py  height_to_normal.py
catena/core/nodes/create/: __init__.py  outro.py  read.py  start.py  transition.py  write.py
catena/core/nodes/file/: __init__.py  read.py  write.py  write_albedo.py  write_ambient_occlusion.py  write_height.py  write_metallic.py  write_normal.py  (+1 more)
catena/core/panes/: README.md  content_browser.py  node_graph.py  outliner.py  pane.py  properties.py  resize.py  timeline.py  viewport.py
catena/core/prefs/: README.md  category_data.py  preferences.py
catena/core/resources/: __init__.py
catena/core/toolbars/: README.md  actions.py  actions_toolbar.py  client_toolbar.py  status_bar.py
editor/: main.py
editor/core/: about.py  client.py  shortcuts.py  toolbar.py
editor/core/panes/: content_browser.py  outliner.py  pane.py  properties.py  resize.py  viewport.py
(+72 files in other folders)
